--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,16 @@
   "manifest_version": 3,
   "name": "Context Search Pro",
   "description": "Quickly search selected text on Google, Gemini and YouTube.",
-  "version": "1.0.0",
+  "version": "1.1.0",
 
   "permissions": [
-    "contextMenus"
+    "contextMenus",
+    "scripting",
+    "activeTab"
+  ],
+
+  "host_permissions": [
+    "https://gemini.google.com/*"
   ],
 
   "background": {
