--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,26 @@
 {
   "manifest_version": 3,
-  "name": "Context Search Pro",
-  "description": "Quickly search selected text on Google, Gemini and YouTube.",
-  "version": "1.1.0",
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
+  "version": "1.2.0",
+  "default_locale": "pt",
 
   "permissions": [
     "contextMenus",
     "scripting",
-    "activeTab"
+    "tabs"
   ],
 
   "host_permissions": [
-    "https://gemini.google.com/*"
+    "https://gemini.google.com/app"
   ],
 
   "background": {
     "service_worker": "background.js"
   },
+
   "action": {
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png"
-    },
-    "default_title": "Context Search Pro"
+    "default_title": "__MSG_extensionName__"
   },
 
   "icons": {
