--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
   "version": "1.2.0",
-  "default_locale": "pt",
+  "default_locale": "en",
 
   "permissions": [
     "contextMenus",
