fix(manifest): Remove unnecessary 'tabs' permission

--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,12 @@
   "manifest_version": 3,
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "default_locale": "en",
 
   "permissions": [
     "contextMenus",
-    "scripting",
-    "tabs"
+    "scripting"
   ],
 
   "host_permissions": [
